# xwr68xxisk

./: .cursorrules  .gitignore  LICENSE  README.md  Untitled.ipynb  expert_mode_improvements.md  improvements.md  new_features.md  notes.md  pyproject.toml  radar.py  radar_config_models.py  range_doppler_heatmap.npy  requirements.txt  test_trigger_mode.py  test_trigger_mode_simple.py  testread.py
.cursor/rules/: projectrules.mdc
configs/: default_config.yaml  default_config_20250519_160740.yaml  doppler_config.cfg  info.md  user_profile.cfg  xwr68xx_profile_2025_03_26T09_30_27_281.cfg  xwr68xxconfig.cfg
configs/configs/: default_config_20250514_150800.yaml  default_config_20250514_151002.yaml  user_profile.cfg
debug_data/: radar_params_20250304_144826.json
docs/: Makefile
docs/source/: api.md  cfgformat.md  conf.py  index.md  installation.md  ros2.md  usage.md
docs/source/_static/: custom.css
examples/: aus  example_camera.py  example_depthai.py  example_picamera.py  example_realsense.py  imudemo.py  radar_config_example.py  radar_debug.py  trigger_mode_example.py
examples/configs/: default_config.yaml
firmware/: mmw_dss_pe674.rov.xs  mmw_mss_per4ft.rov.xs  xwr68xx_mmw_demo_dss.map  xwr68xx_mmw_demo_dss.xe674  xwr68xx_mmw_demo_mss.map  xwr68xx_mmw_demo_mss.xer4f
firmware/docs/doxygen/html/: annotated.html  classes.html  classti__datapath__dpif.html  classti__datapath__dpif__coll__graph.map  classti__datapath__dpif__coll__graph.md5  dir_000006_000000.html  dir_000008_000000.html  dir_000008_000006.html  dir_000009_000000.html  dir_000009_000010.html  dir_000010_000000.html  dir_000011_000000.html  dir_000011_000006.html  dir_000011_000010.html  dir_14bc92f4b96c8519b376567118ac28b3.html  dir_2e5ca443b8abc5f0b5139b7170d71d15.html  dir_2f49a2570b2cd99ebe158114a3e6f252.html  dir_2f49a2570b2cd99ebe158114a3e6f252_dep.map  dir_3aaef2bc55c07543385f2b65bc5b068a.html  dir_3e0251f3b8503dabc0490f404d4946a4.html  dir_3e0251f3b8503dabc0490f404d4946a4_dep.map  dir_41bc8059bb2b280050193970cc9ccd20.html  dir_41bc8059bb2b280050193970cc9ccd20_dep.map  dir_44a05b07188bf16428f6a874431369ab.html  dir_44a05b07188bf16428f6a874431369ab_dep.map  dir_4bebd572697dddf641123f535bc0b85a.html  dir_7b24d9cbb951d20a5e20f974b1584a18.html  dir_8e8a6c1a098de0a3b490677fb052f0ed.html  dir_999ea29f6fe13f1ec5dc080b8071f0d8.html  dp__error_8h.html  (+440 more)
firmware/mss/: mss_main.c
info/: clustering.py  data_parser_awr2544.py  filters.py  parser_mmw_demo.py  profile_3d_3Azim_1ElevTx_DDM_awr2544_1Xmode.cfg  radar_receive-py  test_radar.py  usage.rst
magic_word_debug/: magic_word_detections_20250808_162818.txt  magic_word_detections_20250808_163027.txt
profiles/: profile_2d.cfg  profile_3d.cfg  xwr68xx_profile_2025_03_26T09_30_27_281.cfg
recordings/: main_20250321_162638_metadata.csv  radar_data_20250228_185014.csv  radar_data_20250228_185056.csv  radar_data_20250304_152903.csv  radar_data_20250304_201110.csv  radar_data_20250304_201229.csv  radar_data_20250304_201729.csv  radar_data_20250304_201809.csv  radar_data_20250304_201849.csv  radar_data_20250304_201951.csv  radar_data_20250314_150405.csv  radar_data_20250321_162022.csv  radar_data_20250321_162638.csv  radar_data_20250407_144804_clusters.csv  radar_data_20250407_145530.csv  radar_data_20250407_150122.csv  radar_data_20250407_150122.pcd  radar_data_20250407_150122_tracks.csv  radar_data_20250407_150516.csv  radar_data_20250407_150516.pcd  radar_data_20250407_151327.csv  radar_data_20250407_151405.csv
tests/: test_camera_recorder.py  test_cameras.py  test_clustering.py  test_config.py  test_config_generator.py  test_data_pipeline.py  test_imu.py  test_parse.py  test_point_cloud.py  test_radar_config.py  test_record.py  test_tracking.py
tmp/: profile.cfg  profile_0p045m.cfg  profile_1.cfg  profile_11fps.cfg  profile_3d.cfg
xwr68xxisk/: CMakeLists.txt  README_ROS2.md  README_radar_config.md  __init__.py  camera_recorder.py  cameras.py  clustering.py  config.py  config_generator.py  defaultconfig.py  doranode.py  example_usage.py  gui.py  imu.py  imu_recorder.py  main.py  package.xml  parse.py  point_cloud.py  problems.md  radar.py  radar_config.py  radar_config_example.py  radar_config_models.py  record.py  requirements.txt  rerun_video.py  rerun_viewer.py  rosnode.py  test_imu.py  test_radar_config.py  tracking.py
xwr68xxisk/config/: radar_publisher_params.yaml  radar_replay_params.yaml  robot_transform_example.yaml
xwr68xxisk/configs/: __init__.py  base_config.py  camera_config.py  clustering_config.py  config_manager.py  default_config.yaml  gui_config.py  recording_config.py  tracking_config.py  user_profile.cfg
xwr68xxisk/data_management/: __init__.py  recorder.py  recording_utils.py  replayer.py
xwr68xxisk/gui/: __init__.py  main_gui.py  plot_manager.py  profile_config_view.py
xwr68xxisk/launch/: radar_odom_transform.launch.py  radar_publisher.launch.py  radar_replay.launch.py
xwr68xxisk/msg/: RadarInfo.msg  RadarPointCloud.msg
xwr68xxisk/scripts/: check_transforms.py  pointcloud2_converter.py  radar_publisher_node.py  radar_replay_node.py  radar_transform_node.py
xwr68xxisk/xwr68xxisk/: radar_config_models.py
(+107 files in other folders)
